--- a/server/online-calendar/package.json
+++ b/server/online-calendar/package.json
@@ -25,6 +25,7 @@
     "@nestjs/core": "^9.0.0",
     "@nestjs/mongoose": "^9.2.1",
     "@nestjs/platform-express": "^9.0.0",
+    "@nestjs/swagger": "^6.3.0",
     "@types/validator": "^13.7.14",
     "bcrypt": "^5.1.0",
     "class-transformer": "^0.5.1",
