--- a/web-app/online-calendar/package.json
+++ b/web-app/online-calendar/package.json
@@ -16,12 +16,14 @@
     "@angular/compiler": "^15.2.0",
     "@angular/core": "^15.2.0",
     "@angular/forms": "^15.2.0",
+    "@angular/material": "^15.2.5",
     "@angular/platform-browser": "^15.2.0",
     "@angular/platform-browser-dynamic": "^15.2.0",
     "@angular/router": "^15.2.0",
     "@ngrx/effects": "^15.4.0",
     "@ngrx/store": "^15.4.0",
     "@ngrx/store-devtools": "^15.4.0",
+    "lodash": "^4.17.21",
     "tslib": "^2.3.0",
     "zone.js": "~0.12.0"
   },
